# sketchybar-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release-plz.yml
src/: lib.rs  sketchybar.h
