[package]
name = "sketchybar-rs"
version = "0.2.0"
edition = "2021"
authors = ["John Allen <johnallen3d@threedogconsulting.com>"]
repository = "https://github.com/johnallen3d/sketchybar-rs"
description = "Send messages and receive events from SketchyBar"
keywords = ["sketchybar"]
categories = ["macos"]
readme = "README.md"

license = "MIT"

[dependencies]
libc = "0.2.159"

[build-dependencies]
cc = "1.1.24"
